Add local storage of blender path

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           value="./blender"
           required
         />
+        <br>
+        <button id="save">Save preset in memory</button>
       </section>
 
       <section class="box">
@@ -91,7 +93,7 @@
         <input type="number" id="frame_number" name="frames">
       </section>
 
-      <button id="submit_btn" type="submit">Generate command</button>
+      <button id="submit_btn" type="submit">Generate new command</button>
         <button id="clear" type="button">Clear</button>
         <label id="alert" class="hidden" for="output">Copied to clipboard</label>
 
