remove cd from preset

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           id="blender_path"
           type="text"
           name="blender-path"
-          value="cd '\Program Files (x86)\Steam\steamapps\common\Blender\'"
+          value="\Program Files (x86)\Steam\steamapps\common\Blender\"
           required
         />
         <label for="run_blender">default run command</label>
