reduce examples text size

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           value="C:\"
           required
         />
-        <p>Example: C:\Users\Bob\Desktop\BlenderArt\design1.blend</p>
+        <p class="example">e.g. C:\Users\Bob\Desktop\BlenderArt\design1.blend</p>
       </section>
 
       <section class="box">
@@ -34,6 +34,7 @@
           value="\Program Files (x86)\Steam\steamapps\common\Blender\"
           required
         />
+        <p class="example">e.g. C:\Program Files (x86)\Steam\steamapps\common\Blender\</p>
         <label for="run_blender">default run command</label>
         <input
           id="run_blender"
