--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           value="\Program Files (x86)\Steam\steamapps\common\Blender\"
           required
         />
-        <p class="example">e.g. C:\Program Files (x86)\Steam\steamapps\common\Blender\</p>
+        <p class="example">e.g. \Program Files (x86)\Steam\steamapps\common\Blender\</p>
         <label for="run_blender">default run command</label>
         <input
           id="run_blender"
@@ -103,6 +103,7 @@
     </form>
 
     <section class="container cmd-display">
+      <label class="light-txt">Output</label>
       <textarea id="output"></textarea>  
     </section>
   
