add disclaimer and guide pages

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blender command line GUI Disclaimer</title>
-    <link rel="stylesheet" href="disclaimer.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" type="image/jpg" href="./Media/blender.png" />
+    <link rel="stylesheet" href="info.css" />
   </head>
   <main>
     <body>
@@ -104,9 +97,6 @@
       <p>
         If you have any questions, concerns, or complaints regarding this
         Disclaimer, we encourage you to contact us using the details below:
-      </p>
-      <p>
-        k&#106;&#49;3&#56;13&#64;&#109;y&#46;&#98;&#114;&#105;&#115;t&#111;l.ac.u&#107;
       </p>
       <p>This document was last updated on January 8, 2022</p>
     </body>
