--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <h1>Blender Command Line Render Tool
       </h1>
       <img src="Media/blender.png">
+      <nav>
+        <a class="guide" href="./guide.html" target="_blank">View guide</a>
+      </nav>
       </header>
       <section class="box">
         <h2>Target file</h2>
@@ -46,7 +49,7 @@
           value=""
           required
         />
-        <p class="example">e.g. \Program Files (x86)\Steam\steamapps\common\Blender\</p>
+        <p class="example">e.g. C:\Program Files (x86)\Steam\steamapps\common\Blender\</p>
         <br>
         <button id="save">Save download path in memory</button>
       </section>
@@ -113,10 +116,11 @@
 
     <footer>
       <p>
-        <span><a href="https://github.com/duckRabbitPy"><i id="github-icon" class="fab fa-github"></i></a></span
+        <span><i id="github-icon" class="fab fa-github"></i></span
         >DuckRabbitPy
-        <span> <a class="disclaimer" href="./disclaimer.html">Disclaimer</a></span>
       </p>
+      <a class="disclaimer" target="_blank" href="
+          ./disclaimer.html">disclaimer</a>
     
     </footer>
   
